# akademikyazim

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PROPOSALS.md  Dockerfile  FORK_ROADMAP.md  LICENSE  README.md  RESEARCH_BACKING.md  agents.yaml  banner.sh  ocr_pipeline.py  pyproject.toml  tezatlas_cli.py
.claude/: settings.local.json
.claude/commands/: ai-review.md  assumptions.md  career-profile.md  citation-chain.md  citation-check.md  compile-pdf.md  contradictions.md  devil-advocate.md  gaps.md  generate-citations.md  import.md  install-plugin.md  intake.md  knowledge-map.md  latex.md  method-audit.md  review-draft.md  so-what.md  status.md  submission-check.md  synthesize.md  tezatlas.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  website-ci.yml
agents/: README.md  __init__.py  config.py  context.py  memory.py  pipeline.py  run.py  tools.py
agents/core/: __init__.py  argument_builder.py  citation_verifier.py  draft_writer.py  literature_analyst.py  methodology_checker.py  orchestrator.py  rq_refiner.py  self_critic.py  source_hunter.py  utils.py
agents/prompts/: argument_builder.md  citation_verifier.md  draft_writer.md  literature_analyst.md  methodology_checker.md  orchestrator.md  rq_refiner.md  self_critic.md  source_hunter.md
agents/providers/: __init__.py  anthropic.py  base.py  openai_compat.py
core/: __init__.py  dashboard.py  literature_intel.py  log.py  phase_gate.py  session.py
docs/: TURKISH_MEDICAL_WORKFLOWS.md
mcp_server/: README.md  api_clients.py  server.py
scripts/: assumption_killer.py  career_summary.py  check_frontmatter.py  check_no_pdf.py  check_status_staleness.py  citation_chain.py  contradiction_scan.py  find_source.py  gap_scanner.py  import_project.py  install_plugin.py  intake_protocol.py  knowledge_map.py  new_project.py  phase_gate_check.py  reading_tracker.py  rq_drift.py  saturation_map.py  session_end.py  session_start.py  snowball.py  so_what_test.py  synthesize.py  validate_plugin.py
skills/: INDEX.md
skills/architecture/: adaptive-output.md  ai-provenance-layer.md  autonomous-telemetry.md  collaborative-workspace.md  feedback-integration-engine.md  methodological-oracle.md  proactive-methodological-guardian.md  reproducibility-layer.md
skills/core/: academic-integrity.md  agent-orchestration.md  algorithmic-bias-audit.md  anti-hallucination.md  attrition-prevention.md  cognitive-augmentation.md  context-management.md  data-privacy.md  deadline-mode.md  error-recovery.md  guided-writing-mode.md  iron-rules.md  learning-model.md  literature-intelligence.md  modes.md  multilingual-sources.md  onboarding.md  operating-modes.md  orchestrator.md  plugin-system.md  proactive-suggestions.md  productive-struggle.md  quality-control.md  research-career-graph.md  research-ethics.md  reviewer-mode.md  section-infrastructure.md  session-continuity.md  smart-choice-presentation.md  source-policy.md  status-command.md  tezatlas-exchange.md  user-modes.md  web-version-roadmap.md  what-is-tezatlas.md  working-principles.md  writing-psychology.md
skills/disciplines/: egitim.md  isletme.md  law.md  social-sciences.md  yok-compliance.md
skills/moc/: MOC-architecture.md  MOC-citations.md  MOC-core.md  MOC-disciplines.md  MOC-phases.md  MOC-universities.md
skills/techniques/: academic-writing-quality.md  argument-evaluation.md  argument-mapping.md  binge-prevention.md  citation-formatting.md  citation-graph.md  comparative-analysis.md  contribution-claim.md  copilot-reading.md  copilot-writing.md  critical-reading.md  drafting-alternatives.md  evidence-synthesis.md  feedback-integration.md  implementation-intention.md  journal-selection.md  knowledge-gap-visualizer.md  knowledge-transforming-prompts.md  literature-synthesis.md  motivational-regulation.md  natural-voice.md  paragraph-coherence.md  pdf-reading.md  pre-submission-review.md  publication-strategist.md  saturation-check.md  session-structure.md  snowball-sampling.md  source-acquisition-protocol.md  source-hunting.md  style-checker.md  style-linter-realtime.md  turkish-academic-writing.md  writing-environment-profile.md  writing-scheduler.md
skills/templates/: tpl-advisor-checkpoint.md  tpl-comparative-analysis.md  tpl-dashboard.md  tpl-lessons.md  tpl-notes.md  tpl-outline.md  tpl-project-identity.md  tpl-reading-report.md  tpl-source-inventory.md  tpl-source-map.md  tpl-status-summary.md  tpl-status.md  tpl-terminology.md  tpl-thesis-protocol.md  tpl-topic-discovery.md  tpl-writing-profile.md  tpl-yok-cover.md
skills/tooling/: annas-archive.md  citation-formats.md  database-access.md  (+7 more)
sources/: README.md
tests/: test_agents.py  test_agents_yaml.py  test_ai_features.py  test_bibtex_gen.py  test_cli.py  test_context.py  test_frontmatter.py  test_gap_scanner.py  test_import_project.py  test_intake_protocol.py  test_literature_intel.py  test_memory.py  test_new_commands.py  test_new_project.py  test_node_content.py  test_ocr_pipeline.py  test_phase_chain.py  test_pipeline.py  test_reading_tracker.py  test_session.py  test_skill_graph.py  test_tool_calling.py
tools/: bibtex_generator.py  latex_converter.py  style_linter.py
website/: SCREENSHOT_VERIFICATION_REPORT.md  package-lock.json  package.json  playwright.config.ts
(+105 files in other folders)
