[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akademikyazim"}}]}{Jsii to=functions.exec კომენტary code 211  天天中彩票qq? we need actual result. let's wait.】【”】【 to=functions.edit კომენტary 下载彩神争霸% raw? Wait tool responses missing. need continue. 极速赛车? let's see.ത്സ to=functions.edit კომენტary  荣富? Hmm no outputs due bug. Let's ask read? Actually need wait? use process? no session id not background. maybe tool call failed due unicode? Let's inspect maybe no results because multi tool unsupported? Wait. We need actual response. Response missing maybe because aggregated? Let's continue? Hmm. We'll do separate maybe safer. +#+#+#+#+#+ to=functions.exec մեկնաբանություն  天天彩票提现 玩彩神争霸? It's not showing. Perhaps previous tool call hung? Need maybe proceed. Let's do git status maybe.출장샵 to=functions.exec კომენტary  大发时时彩怎么 to=functions.exec  天天中ி? Let's just query. рәиси to=functions.exec टिप्पणी  天天中彩票公众号ിയൊന്നുമില്ല. Let's proceed separate. +#+#+#+#+#+ to=functions.exec  天天中彩票未json {
version = "1.0.0"
description = "Agentic AI Workflow Framework for academic writing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["academic", "writing", "research", "ai", "workflow"]

# Core dependencies — needed for the agents/ module
dependencies = [
    "openai>=1.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# OCR pipeline: python3 ocr_pipeline.py sources/ --batch
ocr = [
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
]

# Agents module (source hunter, methodology checker, citation verifier)
# pymupdf is needed for citation verifier PDF parsing
agents = [
    "openai>=1.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
]

# Development: testing, linting, validation
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pyyaml>=6.0",
    "pre-commit>=3.0",
]

# MCP server: academic API tools (Semantic Scholar, OpenAlex, CrossRef)
mcp = [
    "mcp>=1.0",
]

# BibTeX generator: DOI extraction and CrossRef lookup
bibtex = [
    "pymupdf>=1.24",
]

# Install everything
all = [
    "tezatlas[ocr,agents,dev,mcp,bibtex]",
]

[project.scripts]
tezatlas-agents = "agents.run:main"
tezatlas-ocr = "ocr_pipeline:main"
tezatlas-bibtex = "tools.bibtex_generator:main"
tezatlas-mcp = "mcp_server.server:run_mcp_server"

[tool.setuptools.packages.find]
include = ["agents*", "mcp_server*", "tools*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore:builtin type Swig.*has no __module__:DeprecationWarning",
]

[tool.setuptools.package-data]
"agents" = ["prompts/*.md"]
